# RioSockets

./: LICENSE  README.md
Source/: CMakeLists.txt  riosockets.c  riosockets.h
Source/mingw/: rio.h
